--- a/render.yaml
+++ b/render.yaml
@@ -5,4 +5,5 @@ services:
       pip install -r requirements.txt
       python manage.py makemigrations
       python manage.py migrate 
+      python manage.py collectstatic
     startCommand: python manage_startup.py && gunicorn quizWeb.wsgi:application
