--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,7 @@
 services:
   - type: web
     name: quizWeb
-    buildCommand: |
-      pip install -r requirements.txt
-      python manage.py makemigrations
-      python manage.py migrate 
-      python manage.py collectstatic
+    buildCommand: 
+      pip install -r requirements.txt && python manage.py collectstatic --noinput && python manage.py migrate && python manage.py makemigrations
+
     startCommand: python manage_startup.py && gunicorn quizWeb.wsgi:application
